# Qi

./: .cursorignore  .cursorrules  .env  .gitignore  README.md  README_new.md  envelope_structure.py  final_test_output.txt  main.py  package-lock.json  package.json  plugin_prompt.py  pyproject.toml  svelte.config.js  test_phase3_comprehensive.py  test_plugin.py  test_schema.py
addons/addon-skeleton/: addon.py  addon.toml
addons/core_json_db/: addon.py
addons/core_mock_auth/: addon.py
app/: launcher.py  main.py  runners.py  utils.py
app_new/: main.py
archived/app_new/: application.py  launcher.py
archived/core_new/: abc.py  di.py  logger.py
archived/docs/: Qi-ayon_comparison.md  Qi-specifications.md
config/: .env  bundles.toml  qi.config.toml
core/: __init__.py  bus.py  config.py  constants.py  decorators.py  dev_proxy.py  extension.py  hub.py  launch_config.py  log.py  logger.py  logging.py  models.py  server.py  settings.py
core/addon/: base.py  discovery.py  exceptions.py  manager.py
core/bases/: __init__.py  models.py  plugins.py  settings.py  settings_new.py  (+1 more)
core_new/: config.py  models.py
docs/: Architecture_Separation_Summary.md  Dependency_Injection_Refactoring_Summary.md  EventBus_Renaming_Summary.md  Phase3_Fixes_Summary.md  Qi-ayon_comparison.md  Qi-dev_questions_and_answers.md  Qi-specifications.md  Qi_Refactoring_Complete_Summary.md  Qi_architecture_roadmap.md  Qi_q_and_a.md  envelope_structure.py
hub/: .env  launcher.py  launcher_old.py  main.py  qi_launcher.py  runners.py  utils.py
tools/: convert_icon.py  run_dev.ps1  setup.ps1
(+209 files in other folders)
