[project]
name = "qi"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "colorlog>=6.9.0",
    "fastapi[standard]>=0.115.12",
    "mouse>=0.7.1",
    "pyblish-base>=1.8.12",
    "pystray>=0.19.5",
    "pywebview>=5.4",
    "pyyaml>=6.0.2",
    "watchdog>=6.0.0",
]
