[project]
name = "qi"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "dotenv>=0.9.9",
    "fastapi[standard]>=0.115.12",
    "mouse>=0.7.1",
    "pyblish-base>=1.8.12",
    "pystray>=0.19.5",
    "pytest>=8.3.5",
    "pytest-asyncio>=1.0.0",
    "pywebview>=5.4",
    "pyyaml>=6.0.2",
    "typer>=0.15.3",
    "watchdog>=6.0.0",
]
